added some custom button designs

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         </section>
         <section class="section sec3 portfolio"id="portfolio">
             <div class="main-title">
-                <h2>My <span>Portfolio</span> <span class="bg-text">my work</span></h2>
+                <h2>My Projects</h2>
             </div>
             <p class="port-text">Here are some of my latest projects</p>
             <div class="portfolios">
