--- a/index.html
+++ b/index.html
@@ -267,40 +267,40 @@
         </section>
         <section class="section sec5" id="contact">
             <div class="main-title">
-                <h2>Contact <span>me</span> <span class="bg-text">my work</span></h2>
+                <h2>Contact Me</h2>
             </div>
             <div class="contact-content-con">
                 <div class="left-contact">
                     <h4>Contact me here</h4>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Itaque enim, quas deserunt quidem nobis quod?</p>
+                    <p>Feel free to get in touch with me. I'm eager to connect and discuss potential collaborations, exciting projects, or any inquiries you may have.</p>
                     <div class="contact-info">
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-map-marker-alt"></i>
-                                location
+                                Location
                             </div>
-                            <p>: London,United Kingdom</p>
+                            <p> Cavite, Philippines</p>
                         </div>
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-envelope"></i>
                                 Email
                             </div>
-                            <p>: contactemail@gmail.com</p>
+                            <p> belveth.lol18@gmail.com</p>
                         </div>
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-user-graduate"></i>
                                 Education
                             </div>
-                            <p>: Cavite State University</p>
+                            <p> Cavite State University</p>
                         </div>
                         <div class="contact-item">
                             <div class="icon">
                                 <i class="fas fa-globe-africa"></i>
                                 Languages
                             </div>
-                            <p>: English, Filipino</p>
+                            <p> English, Filipino</p>
                         </div>
                     </div>
                     <div class="contact-icons">
