--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="right-header">
-                <h1 class="name">
+                <h1 class="name custom-title">
                     Hi, I'm Kenneth<span> Sason</span><br>
                     A Web Developer
                 </h1>
@@ -167,7 +167,7 @@
             </div>
         </section>
         <section class="section sec3 portfolio"id="portfolio">
-            <div class="main-title">
+            <div class="main-title custom-title">
                 <h2>My Projects</h2>
             </div>
             <p class="port-text">Here are some of my latest projects</p>
@@ -266,7 +266,7 @@
 
         </section>
         <section class="section sec5" id="contact">
-            <div class="main-title">
+            <div class="main-title custom-title">
                 <h2>Contact Me</h2>
             </div>
             <div class="contact-content-con">
