--- a/index.html
+++ b/index.html
@@ -174,12 +174,12 @@
             <div class="portfolios">
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port1.jpg" alt="">
+                        <img src="img/pokeball.png" alt="">
                     </div>
                     <div class="hover-item">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="https://kreytra17.github.io/WD34_Exercise12_Sason/index.html" target="__blank" class="icon">
+                            <a href="https://kreytra17.github.io/Pokemon_API/" target="__blank" class="icon">
                                 <i class=" fab fa-github"></i>
                             </a>
                             <a href="https://kreytra17.github.io/WD34_Exercise12_Sason/index.html" target="__blank"class="icon">
