added new item for the projects section

--- a/index.html
+++ b/index.html
@@ -288,12 +288,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port2.jpg" alt="">
+                        <img src="https://plus.unsplash.com/premium_photo-1683141081466-29239d3b4838?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8d2VhdGhlciUyMGNhcnRvb258ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60" alt="">
                     </div>
                     <div class="hover-item">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" target="__blank" class="icon">
+                            <a href="https://kreytra17.github.io/weathermap-app/" target="__blank" class="icon">
                                 <i class=" fab fa-github"></i>
                             </a>
                             <a href="#" target="__blank"class="icon">
@@ -307,12 +307,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="img/port3.jpg" alt="">
+                        <img src="https://www.reshot.com/preview-assets/icons/5SZXMBGK6T/sunny-weather-5SZXMBGK6T.svg" alt="">
                     </div>
                     <div class="hover-item">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="#" target="__blank" class="icon">
+                            <a href="https://kreytra17.github.io/weathermap-app/" target="__blank" class="icon">
                                 <i class=" fab fa-github"></i>
                             </a>
                             <a href="#" target="__blank"class="icon">
