--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     I specialize in web development, crafting engaging digital experiences that come to life through code. Feel free to explore my portfolio to witness the projects I've passionately brought to fruition. Don't hesitate to reach out.
                 </p>
                 <div class="btn-con">
-                    <a href="" class="main-btn">
+                    <a href="https://drive.google.com/file/d/1rj5G_sbfWk95YWyR4PFHE8O5-Kk67LG1/view?usp=sharing" class="main-btn">
                         <span class="btn-text">Dowload CV</span>
                         <span class="btn-icon"><i class="fas fa-download"></i></span>
                     </a>
