added new item for projects

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="right-header">
                 <h1 class="name custom-title">
                     Hi, I'm Kenneth<span> Sason</span><br>
-                    A Web Developer
+                    <span class="type-text">A Web Developer</span>
                 </h1>
                 <p>
                     I specialize in web development, crafting engaging digital experiences that come to life through code. Feel free to explore my portfolio to witness the projects I've passionately brought to fruition. Don't hesitate to reach out.
@@ -307,12 +307,12 @@
                 </div>
                 <div class="portfolio-item">
                     <div class="image">
-                        <img src="https://www.reshot.com/preview-assets/icons/5SZXMBGK6T/sunny-weather-5SZXMBGK6T.svg" alt="">
+                        <img src="https://img.freepik.com/free-photo/girl-with-purple-hair-is-playing-guitar_1340-32633.jpg" alt="">
                     </div>
                     <div class="hover-item">
                         <h3>Project Source</h3>
                         <div class="icons">
-                            <a href="https://kreytra17.github.io/weathermap-app/" target="__blank" class="icon">
+                            <a href="https://anime-site-pi.vercel.app" target="__blank" class="icon">
                                 <i class=" fab fa-github"></i>
                             </a>
                             <a href="#" target="__blank"class="icon">
